[project]
name = "merry-christmas-tree"
version = "1.0.0"
description = "A polished Python Christmas tree animation with a Tkinter GUI and Pillow particle rendering."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Merry Christmas Tree Contributors" }
]
dependencies = [
  "Pillow>=9.0.0"
]

[project.scripts]
merry-christmas-tree = "tree_gui:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 120
target-version = "py310"
